add plan node tests
Signed-off-by: Ziwen Wan <ziwen.wan@uber.com>